--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+body {
+    background-color: #f5f7fb;
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.chat-box-bg {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 2px 6px rgb(0 0 0 / 10%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button.back {
+    background-image: url("./img/back.svg");
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+::-webkit-scrollbar {
+    width: 7px;
 }
 
-.App-link {
-  color: #61dafb;
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+    background: #dedede;
+    border-radius: 10px;
+}
+
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+    background: #d0d0d0;
+}
+
+@media (max-width: 1000px) {
+    .chat-list,
+    .chat-wrapper {
+        position: absolute;
+        top: 0;
+        min-height: 90vh;
+        left: 0;
+        right: 0;
+    }
+    .modal-main {
+        width: 75%!important;
+    }
 }
